# lamba

./: CMakeLists.txt  LICENSE  README.md  clean.sh
src/: interpreter.cc
src/lamba/: constructions.cc  constructions.hh  id  parser.cc  parser.hh  token.cc  token.hh  tokenizer.cc  tokenizer.hh
